added submission list and pagination
